fixed submission button spacing on mobile view

--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -151,8 +151,7 @@ form {
       border-radius: 1rem;
       padding: .75rem 1.5rem;
       margin: 2rem 0;
-      margin-top: 2rem;
-      margin-left: 11vw;
+      margin-top: 1rem;
       font-size: 1.5rem;
       -webkit-appearance: none;
       appearance: none;
